//done remove duplicate selected issue //done playerwidget progressBar disappeared in web version //done videoText absolute and cropped in playlist.css
//TODO remove temporary while working on PTI pieces
//TODO fix parse.html playlist style width & overflow issue
//TODO separate markups for each extension page
//TODO optimize script loading for extension
//TODO create loading bar
//TODO https://www.youtube.com/embed/?listType=playlist&amp;list=PLhBgTdAWkxeBX09BokINT1ICC5IZ4C0ju&amp;showinfo=1
//TODO syndicate issue
//TODO strange vimeo player, check for seekTo and other methods
//TODO bootstrap.js conflicts with jQuery tooltip
//TODO implement pti errorTimeout, pti playTimeout(loadingTimeout)
//TODO video switch and resuming fails when switched from main popup player to background player( https://www.youtube.com/watch?v=yxMcuzOgVrU )

git-svn-id: https://kladecinfo.googlecode.com/svn/trunk@392 b2ecd63b-ce3e-1a2e-dd73-34ad02cb03ca

--- a/kladecytI/web/css/playlist.css
+++ b/kladecytI/web/css/playlist.css
@@ -18,7 +18,7 @@
 .playlistFrame .playlist { height: 100%; }
 
 /* video container */
-.playlistFrame .playlist>* { float: left; cursor: default; overflow: hidden; }
+.playlistFrame .playlist>* { float: left; cursor: default; overflow: hidden; position: relative; }
 /*.playlistFrame .playlist>:nth-child(1):not(.display-none), .playlistFrame .playlist>:nth-child(2):not(.display-none) { height: 90px!important; }*/
 /*.playlistFrame .playlist>:nth-child(1):not(.display-none)>:first-child , .playlistFrame .playlist>:nth-child(2):not(.display-none)>:first-child { margin: 0px!important; }*/
 .playlistFrame .playlist>*>* { margin: 0.5px; background-color: #f1f1f1; }
@@ -56,7 +56,7 @@
 /* videoText error-text */
 .playlistFrame .playlist>* .videoText, .playlistFrame .playlist>*:hover .videoText { color: #007FFF; }
 .playlistFrame .playlist>* .error-text { position: relative; left: 10px; }
-.playlistFrame .playlist>* .videoText, .playlistFrame .playlist>* .videoText { word-break: break-all; font-family: Arial, Helvetica, sans-serif; }
+.playlistFrame .playlist>* .videoText { position: absolute; word-break: break-all; font-family: Arial, Helvetica, sans-serif; }
 .playlistFrame .playlist>*.selected .videoText, .playlistFrame .playlist>*.selected:hover .videoText, .playlistFrame .playlist>*.selected .error-text>b>a:link, .playlistFrame .playlist>*.selected .error-text>b>a, .playlistFrame .playlist>*.selected .duration-caption  { color: white!important; }
 
 .playlistFrame .playlist.pti-view-big>* .videoText, .playlistFrame .playlist.pti-view-big>* .videoText { font-size: 11px; padding-top: 2px; }
